--- a/reflectorch/configs/Test_v1.yaml
+++ b/reflectorch/configs/Test_v1.yaml
@@ -7,43 +7,43 @@ dset:
     cls: SubpriorParametricSampler
     kwargs:
       param_ranges:
-        d_full_rel:           [1, 10]
-        rel_sigmas:           [0.5, 3.0]
+        d_sig:                [13, 19]
+        width_sigmas:         [0.5, 3.0]
         k:                    [0.2, 0.7]
-        d_A:                  [5, 50]
-        d_B:                  [5, 50]
-        d_C:                  [5, 50]
-        s_A:                  [2.0, 3.0]
-        s_B:                  [5.0, 6.0]
-        s_C:                  [10.0, 12.0]
-        sld_A:                [0.0, 8.0]
-        sld_B:                [0.0, 8.0]
-        sld_C:                [0.0, 8.0]
-        d_sio2:               [5, 50]
-        s_sio2:               [3.0, 4.0] 
-        s_si:                 [0.0, 10.0]
-        r_sio2:               [2.5, 4.5]
-        r_si:                 [1.5, 3.0]
+        d_A:                  [10, 25]
+        d_B:                  [40, 60]
+        d_C:                  [20, 30]
+        s_A:                  [0.1, 60.0]
+        s_B:                  [0.1, 60.0]
+        s_C:                  [0.1, 60.0]
+        sld_A:                [5.0, 20.0]
+        sld_B:                [60.0, 90.0]
+        sld_C:                [25.0, 50.0]
+        d_sio2:               [50, 100]
+        s_sio2:               [0.1, 60.0] 
+        s_si:                 [0.1, 60.0] 
+        r_sio2:               [12.0, 14.0]
+        r_si:                 [20.5, 23.0]
       bound_width_ranges:
-        d_full_rel:           [1, 10]
-        rel_sigmas:           [0.5, 3.0]
+        d_sig:                [13, 19]
+        width_sigmas:         [0.5, 3.0]
         k:                    [0.2, 0.7]
-        d_A:                  [5, 50]
-        d_B:                  [5, 50]
-        d_C:                  [5, 50]
-        s_A:                  [2.0, 3.0]
-        s_B:                  [5.0, 6.0]
-        s_C:                  [10.0, 12.0]
-        sld_A:                  [0.0, 8.0]
-        sld_B:                  [0.0, 8.0]
-        sld_C:                  [0.0, 8.0]
-        d_sio2:               [5, 50]
-        s_sio2:               [3.0, 4.0] 
-        s_si:                 [0.0, 10.0]
-        r_sio2:               [2.5, 4.5]
-        r_si:                 [1.5, 3.0]
+        d_A:                  [10, 25]
+        d_B:                  [40, 60]
+        d_C:                  [20, 30]
+        s_A:                  [0.1, 60.0]
+        s_B:                  [0.1, 60.0]
+        s_C:                  [0.1, 60.0]
+        sld_A:                [10.0, 15.0]
+        sld_B:                [55.0, 85.0]
+        sld_C:                [35.0, 45.0]
+        d_sio2:               [50, 100]
+        s_sio2:               [0.1, 60.0] 
+        s_si:                 [0.1, 60.0] 
+        r_sio2:               [12.0, 14.0]
+        r_si:                 [20.5, 23.0]
       model_name: repeating_multilayer_abc
-      max_num_layers: 30
+      max_num_layers: 18
       logdist: false
       scale_params_by_ranges: false
       scaled_range: [-1., 1.]
@@ -98,12 +98,12 @@ model:
       repeats_per_block: 2
       mlp_activation: 'gelu'
       pretrained_embedding_net: null
-      dropout_rate: 0.05
+      dropout_rate: 0.03
    
 training:
-  num_iterations: 10000
+  num_iterations: 20000
   batch_size: 4096
-  lr: 1.0e-4
+  lr: 2.5e-4
   grad_accumulation_steps: 1
   clip_grad_norm_max: null
   train_with_q_input: False
