--- a/reflectorch/configs/Test_v1.yaml
+++ b/reflectorch/configs/Test_v1.yaml
@@ -7,7 +7,7 @@ dset:
     cls: SubpriorParametricSampler
     kwargs:
       param_ranges:
-        d_sig:                [13, 19]
+        d_sig:                [8, 12]
         width_sigmas:         [0.5, 3.0]
         k:                    [0.2, 0.7]
         d_A:                  [10, 25]
@@ -19,13 +19,13 @@ dset:
         sld_A:                [5.0, 20.0]
         sld_B:                [60.0, 90.0]
         sld_C:                [25.0, 50.0]
-        d_sio2:               [50, 100]
+        d_sio2:               [50.0, 90.0]
         s_sio2:               [0.1, 60.0] 
         s_si:                 [0.1, 60.0] 
         r_sio2:               [12.0, 14.0]
         r_si:                 [20.5, 23.0]
       bound_width_ranges:
-        d_sig:                [13, 19]
+        d_sig:                [8, 12]
         width_sigmas:         [0.5, 3.0]
         k:                    [0.2, 0.7]
         d_A:                  [10, 25]
@@ -34,16 +34,16 @@ dset:
         s_A:                  [0.1, 60.0]
         s_B:                  [0.1, 60.0]
         s_C:                  [0.1, 60.0]
-        sld_A:                [10.0, 15.0]
-        sld_B:                [55.0, 85.0]
-        sld_C:                [35.0, 45.0]
-        d_sio2:               [50, 100]
+        sld_A:                [5.0, 20.0]
+        sld_B:                [60.0, 90.0]
+        sld_C:                [25.0, 50.0]
+        d_sio2:               [50.0, 90.0]
         s_sio2:               [0.1, 60.0] 
         s_si:                 [0.1, 60.0] 
         r_sio2:               [12.0, 14.0]
         r_si:                 [20.5, 23.0]
       model_name: repeating_multilayer_abc
-      max_num_layers: 18
+      max_num_layers: 15
       logdist: false
       scale_params_by_ranges: false
       scaled_range: [-1., 1.]
@@ -87,7 +87,7 @@ model:
     device: 'cuda'
     kwargs:
       in_channels: 1
-      hidden_channels: [32, 64, 128, 256, 512]
+      hidden_channels: [32, 64, 128, 256, 512, 1024]
       dim_embedding: 128
       dim_avpool: 1
       embedding_net_activation: 'gelu'
@@ -98,12 +98,12 @@ model:
       repeats_per_block: 2
       mlp_activation: 'gelu'
       pretrained_embedding_net: null
-      dropout_rate: 0.03
+      dropout_rate: 0.0
    
 training:
-  num_iterations: 20000
+  num_iterations: 40000
   batch_size: 4096
-  lr: 2.5e-4
+  lr: 5.0e-4
   grad_accumulation_steps: 1
   clip_grad_norm_max: null
   train_with_q_input: False
@@ -120,7 +120,7 @@ training:
     lr_scheduler:
       cls: StepLR
       kwargs:
-        step_size: 500
+        step_size: 600
         gamma: 0.5
   logger:
     use_neptune: false
