--- a/reflectorch/configs/Test_v1.yaml
+++ b/reflectorch/configs/Test_v1.yaml
@@ -13,17 +13,17 @@ dset:
         d_A:                  [10, 25]
         d_B:                  [40, 60]
         d_C:                  [20, 30]
-        s_A:                  [0.1, 60.0]
-        s_B:                  [0.1, 60.0]
-        s_C:                  [0.1, 60.0]
+        s_A:                  [0.5, 10.0]
+        s_B:                  [0.1, 30.0]
+        s_C:                  [4.0, 18.0]
         sld_A:                [5.0, 20.0]
-        sld_B:                [60.0, 90.0]
+        sld_B:                [60.0, 80.0]
         sld_C:                [25.0, 50.0]
         d_sio2:               [50.0, 90.0]
-        s_sio2:               [0.1, 60.0] 
-        s_si:                 [0.1, 60.0] 
-        r_sio2:               [12.0, 14.0]
-        r_si:                 [20.5, 23.0]
+        s_sio2:               [0.1, 6.0] 
+        s_si:                 [0.1, 12.0] 
+        sld_sio2:               [12.0, 14.0]
+        sld_si:                 [20.5, 23.0]
       bound_width_ranges:
         d_sig:                [8, 12]
         width_sigmas:         [0.5, 3.0]
@@ -31,17 +31,17 @@ dset:
         d_A:                  [10, 25]
         d_B:                  [40, 60]
         d_C:                  [20, 30]
-        s_A:                  [0.1, 60.0]
-        s_B:                  [0.1, 60.0]
-        s_C:                  [0.1, 60.0]
+        s_A:                  [0.5, 10.0]
+        s_B:                  [0.1, 30.0]
+        s_C:                  [4.0, 18.0]
         sld_A:                [5.0, 20.0]
-        sld_B:                [60.0, 90.0]
+        sld_B:                [60.0, 80.0]
         sld_C:                [25.0, 50.0]
         d_sio2:               [50.0, 90.0]
-        s_sio2:               [0.1, 60.0] 
-        s_si:                 [0.1, 60.0] 
-        r_sio2:               [12.0, 14.0]
-        r_si:                 [20.5, 23.0]
+        s_sio2:               [0.1, 6.0] 
+        s_si:                 [0.1, 12.0]
+        sld_sio2:               [12.0, 14.0]
+        sld_si:                 [20.5, 23.0]
       model_name: repeating_multilayer_abc
       max_num_layers: 15
       logdist: false
